[tool.poetry]
name = "hw7"
version = "0.1"
description = "-"
authors = ["Dmytro Klymenko <klimenko.dmitris@gmail.com>"]
license = "Mit License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
